Improve Java16 support for legacy mc versions